- Discard reviews with null package pointers - Do not attempt to display reviews with null package pointers, if encountered in the   ReviewWidget

BUG:293058
FIXED-IN: 1.3.0